--- a/.github/workflows/inv-prd-terraform.yml
+++ b/.github/workflows/inv-prd-terraform.yml
@@ -42,9 +42,10 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
       
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2.0.2
         with:
-          terraform_version: 1.1.4
+          terraform_version: 1.1.9
+          terraform_wrapper: false
 
       - id: format
         run: terraform fmt -check >> $GITHUB_OUTPUT
