--- a/.github/workflows/inv-prd-terraform.yml
+++ b/.github/workflows/inv-prd-terraform.yml
@@ -53,7 +53,7 @@ jobs:
       #   continue-on-error: true
       
       - id: initialization
-        run: terraform init >> $GITHUB_OUTPUT
+        run: terraform init
         working-directory: ${{ matrix.dir }}
       
       # - id: get
