--- a/.github/workflows/inv-prd-terraform.yml
+++ b/.github/workflows/inv-prd-terraform.yml
@@ -25,7 +25,7 @@ jobs:
         dir: [
           environments/prd/common,
           # environments/prd/api,
-          # environments/prd/portal,
+          environments/prd/portal,
         ]
 
     permissions:
