--- a/.github/workflows/inv-prd-terraform.yml
+++ b/.github/workflows/inv-prd-terraform.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         dir: [
-          environments/prd/common,
+          # environments/prd/common,
           # environments/prd/api,
           environments/prd/portal,
         ]
